2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettings.cs : thanks to idiotic MS design,
	  AllowXmlAttributes is turned on by default.

2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettings.cs :
	  set_Schemas() is fixed in 2.0 RTM (it just works).
	* XmlResolver.cs : throw ArgumentNullException instead of
	  ArgumentException when both base and relative urls are null.

2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettings.cs : ProhibitDtd is set as default.
	* XmlWriterSettings.cs : no set_OutputMethod.

2005-11-30  Konstantin Triger  <kostat@mainsoft.com>

	* IXmlNamespaceResolver.cs: TARGET_JVM namespace change.

2005-11-17  Vladimir Krasnov <vladimirk@mainsoft.com>

	* XmlInputStream.cs: fixed Initialize method to be able 
	to read unicode file without BOM. TARGET_JVM only.

2005-11-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNodeReader.cs : removed historical one.

2005-11-10  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs, XmlNode.cs :
	  [DebuggerDisplay] are not worthy of existing.

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTokenizedType.cs, XmlNodeOrder.cs : so those enums happen to
	  have [Serializable] in .NET 1.x, and removed in 2.0 (enums are
	  anyways serializable, so those attributes do not make sense).

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlValidatingReader.cs : added CanReadBinaryContent.
	* XmlTextReader.cs, XmlTextReader2.cs : GetNamespacesInScope() are
	  now both public and private (i.e. hush IsVirtual).
	* XmlWriterSettings.cs, XmlWriter.cs, XmlTextWriter.cs :
	  NormalizeNewLines vanished.

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : MoveToAttribute(int) is virtual in NET_2_0.

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlConvert.cs : implemented VerifyTOKEN().

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlConvert.cs : VerifyNCName() and VerifyName() throws
	  ArgumentNullException for "".
