@@ -1,68 +1,0 @@
-// -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*-
-//
-// Profile.cs
-//
-// Author:
-//   Jason Diamond (jason@injektilo.org)
-//
-// (C) 2001 Jason Diamond  http://injektilo.org/
-//
-
-//
-// Permission is hereby granted, free of charge, to any person obtaining
-// a copy of this software and associated documentation files (the
-// "Software"), to deal in the Software without restriction, including
-// without limitation the rights to use, copy, modify, merge, publish,
-// distribute, sublicense, and/or sell copies of the Software, and to
-// permit persons to whom the Software is furnished to do so, subject to
-// the following conditions:
-// 
-// The above copyright notice and this permission notice shall be
-// included in all copies or substantial portions of the Software.
-// 
-// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
-// LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
-// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
-// WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-//
-
-using System;
-using System.Xml;
-
-using System.IO;
-using System.Text;
-
-public class Profile
-{
-	public static void Main(string[] args)
-	{
-		XmlReader xmlReader = null;
-
-		if (args.Length < 1)
-		{
-			xmlReader = new XmlTextReader(Console.In);
-		}
-		else
-		{
-			xmlReader = new XmlTextReader(args[0]);
-		}
-
-		int nodes = 0;
-
-		DateTime start = DateTime.Now;
-
-		while (xmlReader.Read())
-		{
-			++nodes;
-		}
-
-		DateTime end = DateTime.Now;
-
-		Console.WriteLine("time = {0}", end - start);
-
-		Console.WriteLine("nodes = {0}", nodes);
-	}
-}
